# yasmot

./: README.md  convert.py  definitions.py  parser.py  setup.cfg  stracks.py  test.sh  tracking.py
.github/workflows/: draft-pdf.yml  python-package.yml
docs/: paper.bib  paper.md
src/: definitions.py  stracks  tracking.py
src/stracks/: main.py  parser.py  tracking.py
src/util/: show.py
src/yasmot/: definitions.py  frames.py  main.py  parser.py  tracking.py
tests/: L.csv  ST357left.csv  ST357right.csv  error3.csv  stereo1_Left.csv  stereo1_Right.csv
tests/consensus/y8x/: frame_000573.txt  frame_000574.txt  frame_000575.txt  frame_000576.txt  frame_000577.txt  frame_000578.txt
tests/consensus/y8x_h/: frame_000575.txt  frame_000577.txt
tests/consensus/y8x_s/: frame_000570.txt  frame_000571.txt  frame_000574.txt  frame_000579.txt
tests/consensus/y8x_sh/: frame_000575.txt  frame_000576.txt  frame_000577.txt  frame_000578.txt
tests/lab2/: frame_000150.txt  frame_000151.txt  frame_000152.txt  frame_000153.txt  frame_000154.txt  frame_000155.txt  frame_000156.txt  frame_000157.txt  frame_000158.txt  frame_000159.txt
