[metadata]
name = yasmot
# version = attr: medusa.VERSION
version = 0.1
author = Ketil Malde
author_email = ketil@malde.org
description = Object tracker for stereo images/video
long_description = file: README.md
keywords = object tracking
license = LGPL
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console

[options]
include_package_data = False
package_dir =
  = src
packages = yasmot
python_requires = >=3.8
install_requires = parse; scipy

[options.entry_points]
console_scripts =
  yasmot = yasmot.main:main

[flake8]
ignore = E302,E203,E305,E701,E501,E402
